# LilyGo-T-Watch

./: .gitignore  README.md  tool_set_config.json
LilyGo/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  display_esp32.c  display_s3.c  display_watch_s3.c  full_battery.c  main.cpp  pcf8563.c  pcf8563.h  rtc_driver.c  rtc_driver.h  touch.c  touch.h  touch_driver.cpp  touch_driver.h  ui.c  ui.h
main/screens/: ui_Screen1.c
